# semgr-sync-singlethread-boostany

./: CMakeLists.txt
src/: CMakeLists.txt  event.h  msg.h  semanager.cpp  semanager.h
test/: CMakeLists.txt  ft_semgr.cpp  ut_semgr.cpp
